# qr-overlay

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  ar_qr_scanner  cmake_install.cmake  main.cpp  web.cpp  web.h
Debug/: CMakeLists.txt
